--- a/paper/CADE/sources.bib
+++ b/paper/CADE/sources.bib
@@ -280,11 +280,19 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   doi       = {10.1007/3-540-48754-9\_12},
 }
 
-@misc{modal_logic_lean,
-  title = "A Verified Proof of Craig Interpolation for Basic Modal Logic via Tableaux in Lean",
-  author = "Malvin Gattinger",
-  note = "\url{https://malv.in/2022/AiML2022-basic-modal-interpolation-lean.pdf}, Short presentation",
-  year = 2022,
+@inproceedings{lean_modal_logic,
+  author    = {Bruno Bentzen},
+  editor    = {Pietro Baroni and
+               Christoph Benzm{\"{u}}ller and
+               Y{\`{\i}} N. W{\'{a}}ng},
+  title     = {A Henkin-Style Completeness Proof for the Modal Logic {S5}},
+  booktitle = {Logic and Argumentation - 4th International Conference},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {13040},
+  pages     = {459--467},
+  publisher = {Springer},
+  year      = {2021},
+  doi       = {10.1007/978-3-030-89391-0\_25},
 }
 
 @inproceedings{ecumenical_logic,
@@ -386,3 +394,13 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   ISSN    = {2150-914x},
 }
 
+@article{fol_fitting_afp,
+  author  = {Stefan Berghofer},
+  title   = {First-Order Logic According to Fitting},
+  journal = {Archive of Formal Proofs},
+  month   = {August},
+  year    = {2007},
+  note    = {\url{https://isa-afp.org/entries/FOL-Fitting.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
+}
